@@ -1,3 +1,9 @@
+2017-03-19	More pointer messiness.  (4)
+
+		share/innocent-pear/doge-01.cc :
+		- now (lightly) scrambles _.innocent_pear.text.start and
+		  separates it into two parts
+
 2017-03-11	More pointer messiness.  (3)
 
 		share/innocent-pear/doge-01.cc :
